<resources>
    <string name="app_name">CebancPizza</string>
    <string name="telefono">943 31 69 00</string>
    <string name="direccion">Berio Pasealekua, 50, 20018 Donostia, Gipuzkoa</string>
    <string name="email">cebanc@cebanc.com</string>
    <string name="cebanc_pizza">Cebanc Pizza</string>

    <!-- Botones -->
    <string name="btn_empezar">Empezar Pedido</string>
    <string name="btn_pedido">Pedido</string>
    <string name="volver">Volver</string>
    <string name="siguiente">Siguiente</string>
    <string name="btn_mas">+</string>
    <string name="btn_menos">-</string>
    <string name="btn_annadir">Añadir</string>
    <string name="btn_buscar">Buscar</string>

    <!-- Activity datos usuario -->
    <string name="datos_de_contacto">Datos del usuario</string>
    <string name="datos_del_usuario_usuario">Usuario</string>
    <string name="datos_del_usuario_nombre">Nombre</string>
    <string name="datos_del_usuario_apellidos">Apellidos</string>
    <string name="datos_del_usuario_telefono">Teléfono</string>
    <string name="datos_del_usuario_direccion">Dirección</string>
    <string name="datos_del_usuario_email">Email</string>


    <!-- Activity elegir pizza -->
    <string name="titulo_pedidos">Pizzas</string>

    <string name="nombre_pizza_1">Barbacoa</string>
    <string name="descripcion_de_la_pizza_1">Salsa barbacoa, queso 100% mozzarella, ternera especiada, cebolla, bacon, maíz.</string>
    <string name="precio_pizza_1">5,00</string>

    <string name="nombre_pizza_2">Campiña</string>
    <string name="descripcion_de_la_pizza_2">Salsa de tomate, extra de queso 100% mozzarella, champiñón, pimiento verde, cebolla, aceitunas negras y tomate natural.</string>
    <string name="precio_pizza_2">6,00</string>

    <string name="nombre_pizza_3">Gourmet</string>
    <string name="descripcion_de_la_pizza_3">Abundantes filetes de carne de ternera, espárragos verdes finos, tomates frescos y salsa holandesa, aderezada con pimienta de bistec picante.</string>
    <string name="precio_pizza_3">7,50</string>

    <string name="nombre_pizza_4">Hawaiana</string>
    <string name="descripcion_de_la_pizza_4">Salsa de tomate, extra de queso 100% mozzarella, doble de York y piña.</string>
    <string name="precio_pizza_4">6,00</string>

    <string name="nombre_pizza_5">Jamón y Queso</string>
    <string name="descripcion_de_la_pizza_5"></string>
    <string name="precio_pizza_5">5,00</string>

    <string name="nombre_pizza_6">Margarita</string>
    <string name="descripcion_de_la_pizza_6">Crea tu propia pizza. Sobre una base de salsa de tomate y queso 100% mozzarella, añade los ingredientes que tú quieras.</string>
    <string name="precio_pizza_6">5,00</string>

    <string name="nombre_pizza_7">Sin Gluten</string>
    <string name="descripcion_de_la_pizza_7">Crea tu propia pizza. Con queso 100% mozzarella, salsa a elegir entre tomate y BBQ y nuestros toppings: pollo a la parrilla, bacon o york.</string>
    <string name="precio_pizza_7">6,00</string>

    <string name="nombre_pizza_8">Pepperoni</string>
    <string name="descripcion_de_la_pizza_8">Salsa de tomate, extra de queso 100% mozzarella y doble de pepperoni.</string>
    <string name="precio_pizza_8">7,00</string>

    <string name="nombre_pizza_9">Pulled Beef</string>
    <string name="descripcion_de_la_pizza_9">Salsa BBQ, mozzarella, ternera deshilachada asada lentamente, cebolla, bacon, salsa chimichurri.</string>
    <string name="precio_pizza_9">7,50</string>

    <!-- Activity opciones pizza -->
    <string name="titulo_opcion_pizza">Tipo Pizza</string>

    <string name="tipo_de_masa">Tipo de masa</string>
    <string name="masa_normal">Masa normal</string>
    <string name="masa_fina">Masa fina</string>

    <string name="tamanno">Tamaño</string>
    <string name="tipo_familiar">Familiar</string>
    <string name="tipo_individual">Individual</string>
    <string name="tipo_mediana">Mediana</string>

    <string name="cantidad_opciones_pizza">Cantidad</string>
    <string name="cantidad_inicial_opciones_pizza">1</string>

    <string name="precio_opciones_pizza">Precio</string>
    <string name="precio_inicial_opciones_pizza">0.00</string>

    <!-- Activity elegir bebida -->
    <string name="bebidas">Bebidas</string>
    <string name="cantidad">Cantidad:</string>

    <string name="cocacola">Coca Cola</string>
    <string name="precio_cocacola">Precio: 2,25 € </string>

    <string name="limon">Limon</string>
    <string name="precio_limon">Precio: 2,25€ </string>

    <string name="red_bull">Red Bull</string>
    <string name="precio_redbull">Precio: 3,00 €</string>

    <string name="nestea">Nestea</string>
    <string name="precio_nestea">Precio: 2,00 €</string>

    <string name="cerveza">Cerveza</string>
    <string name="precio_cerveza">Precio: 2,25€</string>

    <string name="agua">Agua</string>
    <string name="precio_agua">Precio: 1,50 €</string>

    <!-- Activity elegir postre -->
    <string name="postres">Postres</string>

    <string name="tartas">Tartas</string>
    <string name="helados">Helados</string>
    <string name="frutas">Frutas</string>

    <string name="chocolate">Chocolate</string>
    <string name="precio_tarta_chocolate">Precio: 3,25€</string>

    <string name="hojaldre">Hojaldre</string>
    <string name="precio_hojaldre">Precio: 3,25€</string>

    <string name="manzana">Manzana</string>
    <string name="precio_manzana">Precio: 3,50€</string>

    <string name="vainilla">Vainilla</string>
    <string name="yogurt">Yogurt</string>
    <string name="precio_helado">Precio: 2,00 €</string>

    <string name="platano">Platano</string>
    <string name="precio_platano">Precio: 1,25€</string>

    <string name="pina">Piña</string>
    <string name="precio_pina">Precio: 1,50€</string>

    <string name="melon">Melón</string>
    <string name="precio_melon">Precio: 1,50€</string>

    <string name="finalizar">Finalizar</string>
    <string name="adem_s_recibir_s_un_vale_para_comer_en_el_comedor_de_cebanc">Además Recibirás un vale para comer en el comedor de Cebanc</string>
    <string name="pedido_realizado_correctamente">Pedido realizado correctamente</string>
    <string name="recibir_s_un_peluche_de_mu_eco_android_por_compra_superior_a_30">Recibirás un peluche de muñeco android por compra superior a 30€</string>
    <string name="mostrar_pedidos">Mostrar Pedidos</string>
</resources>
